# sanjaya

./: .env.example  .gitignore  LICENSE  Procfile  README.md  justfile  pyproject.toml
about/sanjaya-blog/: building-sanjaya.md
about/sanjaya-blog/diagrams/: asoiaf-heap-vs-rlm-minimal.excalidraw  sanjaya-rlm-loop.excalidraw
api/: README.md  pyproject.toml
api/sanjaya_api/: __init__.py  main.py  models.py  sse.py
api/sanjaya_api/routes/: health.py  runs.py
api/sanjaya_api/services/: orchestrator.py
examples/: gepa_optimize.py
examples/prompts/: cooking_video.yaml
nbs/: test_video.ipynb
scripts/: download_longvideobench.py  download_muirbench.py  download_photobench.py  download_sample_videos.py  download_video_benchmarks.py  fix_submission_extensions.py  generate_subtitles.py  generate_transcripts.py  inspect_video_trace.py  run_demo_documents.py  run_demo_images.py  run_demo_prompts.py  run_demo_prompts_optimized.py  run_muirbench.py  run_photobench.py  run_video_benchmarks.py  run_video_qna.py  test_batch_endpoints.py  test_caption_frames.py  vibe_check_rlm.py  vibe_check_video_rlm.py
src/: models.py  repl.py  rlm_repl.py  settings.py
src/sanjaya/: __init__.py  agent.py  answer.py  observability.py  prompts.py  repl.py  rlm.py  rlm_repl.py  settings.py  tracing.py  video_llm.py  video_models.py  video_repl.py  video_rlm_repl.py
src/sanjaya/core/: __init__.py  blocks.py  budget.py  compaction.py  critic.py  errors.py  loop.py  patterns.py  prompts.py  repl.py  schema.py
src/sanjaya/llm/: __init__.py  client.py  moondream.py  pricing.py  types.py
src/sanjaya/logger/: __init__.py  repl_logger.py  root_logger.py
src/sanjaya/retrieval/: __init__.py  base.py  sqlite_fts.py  token_overlap.py
src/sanjaya/tools/: __init__.py  base.py  builtins.py  registry.py
src/sanjaya/tools/document/: __init__.py  parsers.py  toolkit.py
src/sanjaya/tools/image/: __init__.py  media.py  toolkit.py  workspace.py
src/sanjaya/tools/report/: __init__.py  toolkit.py  writers.py
src/sanjaya/tools/video/: __init__.py  media.py  mount.py  retrieval.py  toolkit.py  transcription.py  vision.py  workspace.py
src/sanjaya/tracing/: __init__.py  events.py  loader.py  observability.py  tracer.py
src/sanjaya/utils/: __init__.py  llm.py  prompts.py  utils.py
src/sanjaya/video_tools/: media.py  monty_mount.py  retrieval.py  transcription.py  workspace.py
src/sanjaya_modal/: __init__.py  __main__.py  app.py  lifecycle.py  runner.py
src/video_rlm/: __init__.py  llm.py  tracing.py  video_prompts.py  video_repl.py  video_rlm_repl.py  video_utils.py
src/video_rlm/video_tools/: __init__.py  retrieval.py  transcription.py  workspace.py
tests/: test_image_toolkit.py  test_token_cost_accounting.py
thoughts/_shared/plans/: 2026-04-08-fix-logfire-token-double-counting.md
ui/: README.md  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/benchmarks/: route.ts
ui/app/api/document-benchmarks/: route.ts
ui/app/api/documents/upload/: route.ts
ui/app/api/frames/: route.ts
ui/app/api/history/: route.ts
ui/app/api/history/[runId]/: route.ts
ui/app/api/image-benchmarks/: route.ts
ui/app/api/images/upload/: route.ts
ui/app/api/traces/: route.ts
ui/app/api/videos/: route.ts
ui/app/api/videos/stream/: route.ts
ui/app/api/videos/transcript/: route.ts
ui/app/building-sanjaya/: page.tsx
ui/app/documents/: page.tsx
ui/app/documents/run/: page.tsx
ui/app/images/: page.tsx
ui/app/images/run/: page.tsx
ui/app/run/: page.tsx
ui/components/: navbar.tsx  youtube-player.tsx
ui/components/benchmark/: answer-renderer.tsx  live-run-history.tsx  narrative-note.tsx  overview-table.tsx  prompt-detail.tsx  summary-header.tsx
ui/components/blog/: building-sanjaya-page.tsx
ui/components/hud/: clip-panel.tsx  code-execution-panel.tsx  collapsible-panel.tsx  data-row.tsx  final-answer-panel.tsx  loading-spinner.tsx  panel.tsx  progress-bar.tsx  query-input.tsx  run-detail-modal.tsx  run-history.tsx  run-status.tsx  status-bar.tsx  sub-llm-panel.tsx  token-counter.tsx  trace-timeline.tsx  video-preview-modal.tsx  vision-panel.tsx  windows-panel.tsx
ui/lib/: api.ts  narratives.ts  types.ts  use-document-run.ts  use-image-run.ts  use-run.ts
ui/public/blog/: building-sanjaya.md
