[project]
name = "sanjaya"
version = "0.2.0"
description = "Extensible RLM agent framework with video understanding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.2.0",
    "pydantic-monty>=0.0.9",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=14.0",
    "genai-prices>=0.0.56",
    "nest-asyncio>=1.6.0",
    "moondream-station>=0.1.9",
    "parakeet-mlx>=0.5.1",
    "fastapi>=0.135.3",
    "uvicorn>=0.43.0",
]

[project.optional-dependencies]
video = ["logfire", "Pillow>=10.0"]
tracing = ["logfire"]
all = ["sanjaya[video,tracing]"]
dev = [
    "ruff",
    "pytest",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.pyright]
include = ["src"]
exclude = ["temp"]
ignore = []
defineConstant = { DEBUG = false }

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.setuptools.packages.find]
where = ["src"]
